# verses_v1

./: .gitignore  README.md  delete_index.py  ingesting.py  main.py  pyproject.toml  retrieval.py
core/: config.py  models.py  prompts.py  verse_generator.py  verses.py
db/: database.py
models/: job.py  verse.py
routers/: bookmark.py  job.py  verse.py
schemas/: job.py  verse.py
