[tool.poetry]
name = "verses-v1"
version = "0.1.0"
description = ""
authors = ["emmanueluwa <oemmanuel.uwadiae@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.9.0"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
